# HabitualLife

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: hl-ci.yml
poetry_hl/: pyproject.toml
src/achievements/: apps.py  consts.py  factories.py  models.py  tasks.py  tests.py  urls.py  views.py
src/achievements/migrations/: 0001_initial.py  0002_remove_achievement_image.py  0003_alter_achievement_user.py  0004_remove_achievement_user_achievement_user.py  0005_notification.py  0006_delete_notification.py
src/core/: celery.py  env.py  settings.py  urls.py
src/fixtures/: achievements.yaml
src/habits/: factories.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
src/habits/migrations/: 0001_initial.py  0002_rename_date_habit_created_date_and_more.py  0003_category_unique_user_category.py  0004_alter_category_name.py  0005_alter_habit_category.py  0006_alter_category_name.py  0007_remove_category_unique_user_category.py  0008_alter_habit_category.py  0009_alter_habit_category.py  0010_alter_habit_category_alter_habit_user.py  0011_alter_category_unique_together.py  0012_category_color_habit_status.py  0013_remove_habit_status.py  0014_alter_category_color.py  (+9 more)
src/notifications/: factories.py  models.py  tests.py  urls.py  views.py
src/start/: tests.py  urls.py  views.py
src/statistics/: urls.py
src/stats/: apps.py  tests.py  urls.py  views.py
src/templates/: main.html  start.html
src/users/: factories.py  forms.py  tasks.py  tests.py  urls.py  views.py
(+26 files in other folders)
