[tool.poetry]
name = "poetry-hl"
version = "0.1.0"
description = ""
authors = ["mmackowsky <maciostah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
celery = "^5.3.6"
docker = "^7.0.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
plotly = "^5.18.0"
django-celery-results = "^2.5.1"
django-colorfield = "^0.11.0"
django-environ = "^0.11.2"
sentry-sdk = "^1.39.1"
boto3 = "^1.34.14"
redis = "^5.0.1"
factory-boy = "^3.3.0"
coverage = "^7.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
